kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketlegal-backend
  labels:
    app: pocketlegal-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: pocketlegal-backend
